dynamix/force-app/main/default/objects/Property_Add_On__c/Property_Add_On__c.object-meta.xml
<CustomObject>
    <label>Property Add On Charges</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties Add On</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>