dynamix/force-app/main/default/objects/Property_Add_On__c/fields/Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Parking</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Properties Add On (Car Parking)</relationshipLabel>
    <relationshipName>Properties_Add_On1</relationshipName>
    <type>Lookup</type>
</CustomField>