dynamix/force-app/main/default/objects/Property_Add_On__c/fields/Parking_Status__c.field-meta.xml
<CustomField>
    <fullName>Parking_Status__c</fullName>
    <formula>TEXT(Car_Parking__r.Property_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking Status</label>
    <type>Text</type>
</CustomField>