dynamix/force-app/main/default/objects/Property_Add_On__c/fields/Project_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Project_Add_On__c</fullName>
    <label>Project Add On</label>
    <referenceTo>Project_Add_On_Charges__c</referenceTo>
    <relationshipName>Properties_Add_On</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>